--- a/src/components/Portfolio/styles/Portfolio.css
+++ b/src/components/Portfolio/styles/Portfolio.css
@@ -7,7 +7,7 @@
 
 .portfolio__experience--category {
   text-align: center;
-  color: #2368a2;
+  color: #141414;
 }
 
 .portfolio__experience__card,
